# Voice_Assistant

./: .env.example  .gitignore  Jarvis-checkpoint.py  Jarvis.py  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai_engine/: __init__.py
ai_engine/command_execution/: __init__.py  executor.py  workflows.py
ai_engine/context_management/: __init__.py  manager.py
ai_engine/intent_detection/: detector.py
ai_engine/nlp/: __init__.py  processor.py
ai_engine/plugins/: __init__.py  base.py  builtin.py  registry.py
ai_engine/speech_recognition/: base.py  local.py
ai_engine/text_to_speech/: base.py  pyttsx3_engine.py
backend/: __init__.py
backend/app/: __init__.py  cli.py  main.py
backend/app/configurations/: __init__.py  container.py  logging.py  settings.py
backend/app/controllers/: assistant_controller.py  auth_controller.py  dashboard_controller.py  (+1 more)
deploy/docker/: backend.Dockerfile  frontend.Dockerfile
deploy/kubernetes/: backend.yaml  frontend.yaml  ingress.yaml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md
docs/diagrams/: deployment.mmd  system-flow.mmd
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: browser-assistant.ts
frontend/services/: api-client.ts
frontend/store/: assistant-store.ts
frontend/types/: assistant.ts
scripts/: dev-backend.ps1  dev-frontend.ps1  start-full-app.ps1  verify.ps1
tests/backend/: test_auth.py  test_intent_detector.py
(+30 files in other folders)
